# mrs_point_lio_core

./: .gitman.yml  README.md
ros_packages/mrs_point_lio_core/: CMakeLists.txt  package.xml
ros_packages/mrs_point_lio_core/launch/: point_lio_gazebo_mid360.launch  point_lio_gazebo_os64.launch  point_lio_livox_mid360.launch  rosbag_core.launch  rosbag_estimation_manager.launch  rviz.launch
ros_packages/mrs_point_lio_core/models/x500_mid360/: model.config
ros_packages/mrs_point_lio_core/models/x500_mid360/sdf/: x500_mid360.sdf.jinja
ros_packages/mrs_point_lio_core/rviz/: default.rviz
ros_packages/mrs_point_lio_core/scripts/: refactor_rviz_config.sh  rviz.sh
ros_packages/mrs_point_lio_core/tmux/just_flying_point_lio/: record.sh  tmux.sh
ros_packages/mrs_point_lio_core/tmux/just_flying_point_lio/config/: custom_config.yaml
ros_packages/mrs_point_lio_core/tmux/just_flying_point_lio_test_odom/: tmux.sh
ros_packages/mrs_point_lio_core/tmux/just_flying_point_lio_test_odom/config/: custom_config.yaml  trajectory_params.yaml  trajectory_point_lio.txt
ros_packages/mrs_point_lio_core/tmux/rosbag_estimation/: session.yml
ros_packages/mrs_point_lio_core/tmux/simulation/: session.yml
ros_packages/mrs_point_lio_core/tmux/simulation/livox_mid360/: session.yml
ros_packages/mrs_point_lio_core/tmux/simulation/livox_mid360/custom_configs/: custom_config.yaml  spawner_config.yaml
ros_packages/mrs_point_lio_core/tmux/simulation/ouster_os64/: session.yml
ros_packages/mrs_point_lio_core/tmux/simulation/ouster_os64/custom_configs/: custom_config.yaml  (+1 more)
(+6 files in other folders)
